# CBDB_atlas

./: .dockerignore  .gitignore  .gitmodules  ATTRIBUTION.md  DATA_LICENSE.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  run.py  start_cbdb_atlas.bat  啟動CBDB_atlas.bat
cbdb_atlas/: __init__.py  api.py  async_util.py  cli.py  config.py  db_pool.py  display_format.py  export_render.py  person_export.py  queries.py  search_index.py  source.py  source_release.py  store.py  textnorm.py  upstream.py
config/: default.yaml
docs/: index.html
queries/: addr_by_id.sql  altname.sql  association.sql  biog_address.sql  biog_source.sql  browse_address_children.sql  browse_address_detail.sql  browse_office_tree.sql  browse_office_tree_offices.sql  dynasties.sql  entity_persons_event.sql  entity_persons_event_count.sql  entity_persons_institution.sql  entity_persons_institution_count.sql  entity_persons_office.sql  entity_persons_office_count.sql  entity_persons_place.sql  entity_persons_place_count.sql  entity_persons_text.sql  entity_persons_text_count.sql  entry.sql  event.sql  event_addr.sql  institution.sql  institution_addr.sql  kinship.sql  manifest.yaml  merged_person_resolve.sql  module_counts.sql  people_addr.sql  person_by_id.sql  person_search.sql  person_search_count.sql  person_search_count_lite.sql  person_search_list.sql  possessions.sql  possessions_addr.sql  posting.sql  posting_addr.sql  search_assoc.sql  (+28 more)
scripts/: README.md  build_graph_index.py  build_indexes.py  build_search_index.py  create_views.bat  create_views.sh  (+3 more)
(+29 files in other folders)
