[project]
name = "cbdb-atlas"
version = "0.1.0"
description = "CBDB Atlas — web browser for CBDB SQLite views with externalized SQL queries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "openpyxl>=3.1",
]

[project.scripts]
cbdb-atlas = "cbdb_atlas.cli:main"
cbdb-atlas-serve = "cbdb_atlas.cli:serve"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cbdb_atlas*"]
